--- a/restaurant-web-app/app/templates/index.html
+++ b/restaurant-web-app/app/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>California Restaurant Finder</h1>
     <form id="searchForm">
-        <input type="text" id="query" name="query" placeholder="Describe the type of restaurant you're looking for..." required>
+        <input type="text" id="query" name="query" placeholder="Describe the restaurant you're dreaming of..." required style="width: 100%;">
         <button type="submit">Search</button>
     </form>
     <div id="results"></div>
